<resources>
  <string name="app_name">タスク管理</string>

  <string name="no_title">タイトルなし</string>

  <!--Header-->
  <string name="header_task">タスク</string>
  <string name="header_comp">完了済み</string>
  <string name="header_config">設定</string>
  <string name="header_register">タスク登録</string>

  <!--fragment_home-->

  <!--fragment_task-->
  <!--SnackBar-->
  <string name="task_delete">タスクを削除しました</string>
  <string name="task_archive">タスク完了!</string>

  <!--fragment_archive-->
  <!--SnackBar-->
  <string name="comp_delete">完了したタスクを削除しました</string>
  <string name="comp_task">タスクを元に戻しました</string>
  <string name="task_making">タスクを元に戻しました</string>

  <!--fragment_set-->
  <string name="save">保存</string>
  <string name="set_title">タイトルを入力</string>
  <string name="no_remind">通知しない</string>
  <string name="remind">通知する</string>
  <string name="alarm">アラーム</string>
  <string name="set_date">日付を設定</string>
  <string name="del_date">日付を削除</string>
  <string name="set_time">時間を設定</string>
  <string name="del_time">時間を削除</string>
  <string name="set_detail">詳細を入力</string>

  <!--item_task-->
  <string name="tv_title">タイトル</string>
  <string name="tv_date">yyyy/mm/dd</string>
  <string name="tv_time">hh:mm</string>

  <!--detail_dialog-->
  <string name="edit">編集</string>
  <string name="date">日付</string>
  <string name="time">時間</string>
  <string name="detail">詳細</string>
  <string name="not_register">未登録</string>

  <!--activity_config-->
  <string name="test_remind">通知をテスト</string>
  <string name="test_carryout">実行</string>
  <string name="swipe_direction">タスクをスワイプ時の動作</string>
  <string name="swipe_left">左</string>
  <string name="swipe_right">右</string>
  <string name="swipe_delete">削除</string>
  <string name="swipe_complete">完了</string>
  <string name="swipe_disable">未使用</string>
  <string name="snooze">スヌーズ</string>
  <string name="test_alarm">アラームをテスト</string>
  <string name="stop">停止</string>
</resources>